kube/components/elasticsearch/elasticsearch-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.14.0
          ports:
            - containerPort: 9200
            - containerPort: 9300
          #command: [ "/bin/sh", "-c" ]
          #args:
          #  - |
          #    sleep infinity
          #    resources: {}
          volumeMounts:
            - name: elasticsearch-configmap-volume
              mountPath: /opt/elasticsearch/conf/elasticsearch.yaml
              subPath: elasticsearch.yaml
            - name: elasticsearch-storage-volume
              mountPath: "/data"
      restartPolicy: Always
      volumes:
        - name: elasticsearch-configmap-volume
          configMap:
            name: elasticsearch-configmap
        - name: elasticsearch-storage-volume
          persistentVolumeClaim:
            claimName: elasticsearch-pvc
